# tick

./: .gitignore  readme.md
.github/workflows/: auto-release-notes.yml  docker-build.yml  rust.yml  tauri-build.yml
backend/: Cargo.toml  Dockerfile  compose.yaml  readme.md
backend/src/: data_structs.rs  handlers.rs  lib.rs  main.rs
backend/tests/: main.rs
backend/tests/k6/: load_test.js
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: api_requests.rs  lib.rs  main.rs
frontend/src/components/: columns.tsx  data-table-column-header.tsx  data-table-toolbar.tsx  data-table.tsx  todo-item-dialog.tsx
frontend/src/components/ui/: dialog.tsx  typography.tsx
frontend/src/lib/: app-config.ts
