[package]
name = "tick_backend"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono" ] }
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
log = { version = "0.4" }
simple_logger = { version = "5.1.0" }